# -

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: create_sample_asset.py  sample_input.json
installer/: README_INSTALLER.md  build_installer.sh  ppt_renderer.spec  ppt_renderer_ui.spec
scripts/: run_local.sh
src/ppt_renderer/: __init__.py  api.py  cli.py  gui.py  main.py  models.py  renderers.py  schema.py
tests/: test_cli.py  test_gui.py  test_main.py  test_schema.py
