[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-renderer"
version = "0.1.0"
description = "Deterministic JSON-to-PPTX rendering engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-pptx>=1.0.2",
  "pillow>=10.0.0",
  "pydantic>=2.8.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.28.0",
  "pyinstaller>=6.0.0",
  "build>=1.2.0"
]

[project.scripts]
ppt-renderer = "ppt_renderer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
